<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher" />

        <com.buyer.steelhub.customUi.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/rtgs_screen_description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/large_text_size"
            customfontdemo:fontName="@string/raleway_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal"
            android:padding="1dp">

            <com.buyer.steelhub.customUi.MyEditText
                android:id="@+id/et_rtgs_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:hint="@string/rtgs_number"
                android:padding="10dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/button_text_size"
                customfontdemo:fontName="@string/raleway_medium" />

        </LinearLayout>
    </LinearLayout>

    <com.buyer.steelhub.customUi.MyButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_sign_up_green_bg"
        android:text="@string/submit"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/button_text_size"
        customfontdemo:fontName="@string/raleway_medium" />
</LinearLayout>