<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="1dp">


        <com.buyer.steelhub.customUi.MyTextView
            android:id="@+id/txt_pending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp"
            android:text="@string/pending"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/medium_text_size"
            customfontdemo:fontName="@string/raleway_medium" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent" />

        <com.buyer.steelhub.customUi.MyTextView
            android:id="@+id/txt_confirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp"
            android:text="@string/confirmed"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size"
            customfontdemo:fontName="@string/raleway_medium" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent" />

        <com.buyer.steelhub.customUi.MyTextView
            android:id="@+id/txt_in_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp"
            android:text="@string/in_progress"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size"
            customfontdemo:fontName="@string/raleway_medium" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/transparent" />

        <com.buyer.steelhub.customUi.MyTextView
            android:id="@+id/txt_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp"
            android:text="@string/history"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/medium_text_size"
            customfontdemo:fontName="@string/raleway_medium" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="10dp"
        android:padding="10dp" />


</LinearLayout>