<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/profile_layout_margin"
                android:background="@drawable/layout_grey_bg"
                android:orientation="vertical"
                android:padding="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite"
                    android:orientation="vertical">


                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_firm_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/user"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/user"
                        android:gravity="start|center_vertical"
                        android:hint="@string/firm_name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_address_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/pin"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/pin"
                        android:gravity="start|center_vertical"
                        android:hint="@string/address_line_1"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_address_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/pin"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/pin"
                        android:gravity="start|center_vertical"
                        android:hint="@string/address_line_2"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_landmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/pin"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/pin"
                        android:gravity="start|center_vertical"
                        android:hint="@string/landmark"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/pin"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/pin"
                        android:gravity="start|center_vertical"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/pin"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/pin"
                        android:gravity="start|center_vertical"
                        android:hint="@string/state"
                        android:focusable="false"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/zip"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/zip"
                        android:gravity="start|center_vertical"
                        android:hint="@string/zip"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/phone"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/phone"
                        android:gravity="start|center_vertical"
                        android:hint="@string/mobile"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_text" />

                    <com.tanzil.steelhub.customUi.MyEditText
                        android:id="@+id/et_landline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/phone"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/phone"
                        android:gravity="start|center_vertical"
                        android:hint="@string/land_line"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/new_req_edit_text_size"
                        customfontdemo:fontName="@string/raleway_medium" />


                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height" />
        </LinearLayout>
    </ScrollView>

    <com.tanzil.steelhub.customUi.MyButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_sign_up_green_bg"
        android:text="@string/submit"
        android:textColor="@color/menu_text_color"
        android:textSize="@dimen/large_text_size"
        customfontdemo:fontName="@string/raleway_medium" />
</RelativeLayout>
